bk_ida/gccida/g1/scope_to_insns_initialize
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:659:4: error: expected ';' after expression
rtx v4; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:659:5: error: use of undeclared identifier 'v4'
rtx v4; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:671:1: error: use of undeclared identifier 'v4'
v4 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:673:21: error: use of undeclared identifier 'v4'
if ( active_insn_p( v4) && ( unsigned __int16)( **( _WORD **)&v4[2] - 44) > 1u ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:673:63: error: use of undeclared identifier 'v4'
if ( active_insn_p( v4) && ( unsigned __int16)( **( _WORD **)&v4[2] - 44) > 1u ) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:675:21: error: use of undeclared identifier 'v4'
insn_scopes->data.l[v4->fld[0].rtint] = v3; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:677:22: error: use of undeclared identifier 'v4'
else if ( *( _WORD *)v4 == 37 ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:679:9: error: use of undeclared identifier 'v4'
rtint = v4[2].fld[0].rtint; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:682:16: error: use of undeclared identifier 'v4'
v3 = ( __int64)v4[2]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:683:14: error: use of undeclared identifier 'v4'
delete_insn( v4); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/cfglayout.c:688:14: error: use of undeclared identifier 'v4'
delete_insn( v4); 
             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scope_to_insns_initialize/src/obj/cfglayout.o] Error 1
